--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Mahan Jafari Portfolio" />
-    <link rel="icon" sizes="196x196" href="../src/Assets/Images/Logo.svg" />
+    <link rel="icon" sizes="16x16" href="logo.ico" />
     <title>Mahan Jafari</title>
   </head>
   <body>
