--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Mahan Jafari Portfolio" />
+    <meta
+      name="keywords"
+      content="Mahan Jafari , Portfolio , Frontend Developer , UI Design , React , Typescript"
+    />
+
+    <meta name="og:title" content="Mahan Jafari" />
+    <meta name="og:site_name" content="Mahan Jafari" />
+    <meta name="og:description" content="My Personal Portfolio" />
+    <meta name="og:image" content="../src/Assets/Images/mahan.svg" />
+
+    <meta http-equiv="Content-Language" content="en" />
+    <meta name="author" content="Mahan Jafari" />
+    <meta name="robots" content="index, follow" />
+
     <link rel="icon" sizes="16x16" href="logo.ico" />
+    
     <title>Mahan Jafari</title>
   </head>
   <body>
